# sysrepo-plugin-module-versions

./: CMakeLists.txt  README.md
CMakeModules/: FindLIBNL-GENL.cmake  FindLIBNL-NF.cmake  FindLIBNL-ROUTE.cmake  FindLIBNL.cmake
modules/: module-versions.yang
scripts/: model-install.sh
src/: module-versions-plugin.c
tests/: test-xpath.c
